[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/ui/user_interface.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/arrow-clicked.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/jump_button.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/jump_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/attack_button.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/attack_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/pause_button.png" type="Texture" id=8]
[ext_resource path="res://src/ui/resume_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ui/change_scene_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ui/retry_button.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/ui/quit_button.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/ui/label.tscn" type="PackedScene" id=13]

[node name="user_interface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_left = 52.563
margin_top = 37.4178
margin_right = 118.563
margin_bottom = 51.4178
text = "Score : %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch_buttons" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.313726, 0.156863, 0.156863, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton_left" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 180.807, 587.395 )
rotation = 3.14159
scale = Vector2( 0.252, 0.252 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="TouchScreenButton_right" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 208.986, 456.935 )
scale = Vector2( 0.252, 0.252 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="TouchScreenButton_jump" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 856.318, 448.435 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="TouchScreenButton_attack" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 687.874, 448.713 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="TouchScreenButton_pause" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 883.466, 15.102 )
normal = ExtResource( 8 )

[node name="pause_overlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.678431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" parent="pause_overlay" instance=ExtResource( 13 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -193.679
margin_right = 44.0
margin_bottom = -179.679
text = "Game Paused"

[node name="pause_menu" type="VBoxContainer" parent="pause_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -151.0
margin_right = 158.0
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" parent="pause_overlay/pause_menu" instance=ExtResource( 9 )]
margin_right = 316.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="retry_button" parent="pause_overlay/pause_menu" instance=ExtResource( 11 )]
margin_top = 76.0
margin_right = 316.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Retry"

[node name="change_scene_button" parent="pause_overlay/pause_menu" instance=ExtResource( 10 )]
margin_top = 153.0
margin_right = 316.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[node name="quit_button" parent="pause_overlay/pause_menu" instance=ExtResource( 12 )]
margin_top = 229.0
margin_right = 316.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
[connection signal="pressed" from="touch_buttons/TouchScreenButton_left" to="." method="_on_TouchScreenButton_left_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_left" to="." method="_on_TouchScreenButton_left_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_right" to="." method="_on_TouchScreenButton_right_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_right" to="." method="_on_TouchScreenButton_right_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_jump" to="." method="_on_TouchScreenButton_jump_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_jump" to="." method="_on_TouchScreenButton_jump_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_attack" to="." method="_on_TouchScreenButton_attack_pressed"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_pause" to="." method="_on_TouchScreenButton_pause_pressed"]
